example/errors/lexer/escape_only_char.box
set x: char = '
';

set y: char = '
';
